# Capstone

./: .gitignore  CMakeLists.txt  Capstone_Xavi.sln  Capstone_Xavi.vcxproj  Capstone_Xavi.vcxproj.filters  ScoreTable.h  Snake_Users_Scores.txt
Debug/: Capstone_Xavi.vcxproj.FileListAbsolute.txt
Debug/Capstone_Xavi.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Capstone_Xavi.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
cmake/: FindSDL2.cmake
src/: InputData.cpp  InputData.h  ScoreTable.cpp  ScoreTable.h  controller.cpp  controller.h  game.cpp  game.h  main.cpp  renderer.cpp  renderer.h  snake.cpp  snake.h
